--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,10 +1,30 @@
-@import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 /* css rules to specify families
              font-family: 'Shrikhand', cursive;  
              font-family: 'Roboto', sans-serif; */
-             
-h1 {
-    color: red;
+* {
+  box-sizing: border-box;
+  list-style: none;
 }
+
+#main-wrapper {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  max-width: 768px;
+}
+
+img {
+  max-width: 100%;
+}
+
+a {
+  text-decoration: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+/*# sourceMappingURL=style.css.map */
