--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,89 @@
 /* css rules to specify families
              font-family: 'Shrikhand', cursive;  
              font-family: 'Roboto', sans-serif; */
+.btn {
+  background: linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
+  width: 218px;
+  height: 50px;
+  border-style: none;
+  border-radius: 25px;
+  color: white;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+}
+.btn:hover {
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 63px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+  z-index: 1;
+}
+.header__logo {
+  width: 162px;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  background-color: #353535;
+  height: 197px;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  padding-left: 25px;
+}
+.footer__logo {
+  font-family: "Shrikhand", cursive;
+  font-size: 18px;
+  font-weight: 400;
+  padding: 20px 0;
+  color: white;
+}
+.footer__nav {
+  display: flex;
+  flex-direction: column;
+}
+.footer__nav a {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: white;
+  gap: 11px;
+  line-height: 25px;
+}
+.footer__nav a i {
+  font-size: 13px;
+}
+
+.formulaire {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  background-color: #EAEAEA;
+}
+.formulaire .fa-location-dot {
+  font-size: 16px;
+  padding-right: 17px;
+}
+.formulaire__location {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  border: none;
+  width: 40%;
+  background-color: #EAEAEA;
+}
+
 * {
   box-sizing: border-box;
   list-style: none;
@@ -12,7 +95,6 @@
   display: flex;
   flex-direction: column;
   margin: auto;
-  max-width: 768px;
 }
 
 img {
@@ -23,8 +105,161 @@ a {
   text-decoration: none;
 }
 
-button {
+.introduction {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  min-height: 300px;
+  background: #F6F6F6;
+  font-family: "Roboto", sans-serif;
+}
+.introduction :first-child {
+  font-size: 24px;
+  font-weight: 700;
+}
+.introduction :nth-child(2) {
+  font-size: 18px;
+  font-weight: 300;
+}
+.introduction :last-child {
+  background: linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 218px;
+  height: 50px;
+  border-radius: 25px;
+  color: white;
+  font-size: 16px;
+  font-weight: 500;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   cursor: pointer;
+}
+.introduction :last-child:hover {
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
+}
+
+.fonctionnement {
+  padding: 0 17px;
+  min-height: 300px;
+}
+.fonctionnement h2 {
+  font-family: "Roboto", sans-serif;
+  font-size: 24px;
+  font-weight: 700;
+  padding-top: 20px;
+}
+.fonctionnement .LesEtapes {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  margin: 25px 0 25px 0;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+}
+.fonctionnement .LesEtapes .etape {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 24px;
+  width: 100%;
+  height: 72px;
+  background: #F6F6F6;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+  border-radius: 20px;
+}
+.fonctionnement .LesEtapes .etape :nth-child(2) {
+  font-size: 20px;
+  color: #7E7E7E;
+  padding-right: 20px;
+}
+.fonctionnement .LesEtapes .etape:hover {
+  background-color: #F5EDFF;
+}
+.fonctionnement .LesEtapes .etape:hover :nth-child(2) {
+  color: #9356DC;
+}
+.fonctionnement .LesEtapes .etape :first-child {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 24px;
+  height: 24px;
+  font-size: 14px;
+  background-color: #9356DC;
+  color: white;
+  border-radius: 50%;
+  position: absolute;
+  left: 1px;
+  margin-left: 17px;
+}
+
+.restaurants {
+  display: flex;
+  flex-direction: column;
+  padding: 0 17px;
+  background: #F6F6F6;
+  font-family: "Roboto", sans-serif;
+}
+.restaurants h1 {
+  padding-top: 30px;
+  font-size: 24px;
+  font-weight: 700;
+}
+.restaurants .LesCards {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-bottom: 50px;
+  min-height: 1100px;
+}
+.restaurants .LesCards .card {
+  height: 251px;
+  width: 100%;
+  background: #FFFFFF;
+  border-radius: 15px;
+}
+.restaurants .LesCards .card img {
+  width: 100%;
+  height: 70%;
+  border-radius: 15px 15px 0 0;
+  object-fit: cover;
+}
+.restaurants .LesCards .card p {
+  position: absolute;
+  right: 41px;
+  background: #99E2D0;
+  padding: 7px 9px;
+  color: #008766;
+  font-size: 14px;
+  font-weight: 500;
+}
+.restaurants .LesCards .card__text {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 15px;
+  height: 70px;
+}
+.restaurants .LesCards .card__text h2 {
+  font-size: 18px;
+  font-weight: 700;
+}
+.restaurants .LesCards .card__text h3 {
+  font-size: 17px;
+  font-weight: 300;
+}
+.restaurants .LesCards .card .fa-heart {
+  font-size: 21px;
+  padding-right: 25px;
+  color: black;
 }
 
 /*# sourceMappingURL=style.css.map */
