--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import"utils/variables";
+@import"base/typography";
+@import"components/buttons";
+@import"layouts/headfoot";
+@import"layouts/form";
 
-/* css rules to specify families
-             font-family: 'Shrikhand', cursive;  
-             font-family: 'Roboto', sans-serif; */
-             
 * {
     box-sizing: border-box;
     list-style: none;    
@@ -12,7 +11,7 @@
 #main-wrapper {
     display: flex;
     flex-direction: column;
-    max-width: 768px;  
+    margin: auto;
 } 
 img {
     max-width: 100%;
@@ -20,6 +19,164 @@ img {
 a {
     text-decoration: none;
 }
-button {
-    cursor: pointer;
+.introduction {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    min-height: 300px;
+    background: $mainback;
+    font-family: 'Roboto', sans-serif;
+    :first-child {
+        font: {
+            size: 24px; weight: 700;
+        }
+    }
+    :nth-child(2) {
+        font: {
+            size: 18px; weight: 300; 
+        }
+    }
+    :last-child {
+        background: $basicbtn;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 218px;
+        height: 50px;
+        border-radius: 25px;
+        color: white;
+        font-size: 16px;
+        font-weight: 500;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+        cursor: pointer;
+        &:hover {
+            background: $btnhover;
+            box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
+        }  
+    }
 }
+.fonctionnement {
+    padding: 0 17px;
+    min-height: 300px;
+    h2 {
+        font: {
+            family: 'Roboto', sans-serif; size: 24px; weight: 700;
+        }
+        padding-top: 20px;
+    }
+    .LesEtapes {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        margin: 25px 0 25px 0;
+        font: {
+            family: 'Roboto', sans-serif; size: 16px; weight: 500;
+        }
+        .etape {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    margin-bottom: 24px;
+                    width: 100%;
+                    height: 72px;
+                    background: $mainback;
+                    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+                    border-radius: 20px;
+                    :nth-child(2) {
+                        font-size: 20px;
+                        color: #7E7E7E;
+                        padding-right: 20px;
+                    }
+                        &:hover {
+                            background-color: #F5EDFF;
+                            :nth-child(2) {
+                                color: #9356DC;
+                            }
+                        }
+                    :first-child {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        width: 24px;
+                        height: 24px;
+                        font-size: 14px;
+                        background-color: #9356DC;
+                        color: white;
+                        border-radius: 50%;
+                        position: absolute;
+                        left: 1px;
+                        margin-left: 17px;
+                    }
+                }
+    }    
+}
+.restaurants {
+    display: flex;
+    flex-direction: column;
+    padding: 0 17px;
+    background: $mainback;
+    font-family: 'Roboto', sans-serif;
+    h1 {
+        padding-top: 30px;
+        font: {
+            size: 24px; weight: 700;
+        }
+    }
+    .LesCards {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        margin-bottom: 50px;
+        min-height: 1100px;
+        .card {
+            height: 251px;
+            width: 100%;
+            background: $lightback;
+            border-radius: 15px;
+            img {
+                width: 100%;
+                height: 70%;
+                border-radius: 15px 15px 0 0;
+                object-fit: cover;
+            }
+            p {
+                position: absolute;
+                right: 41px;
+                background: $elements-ton;
+                padding: 7px 9px;
+                color: #008766;
+                font: {
+                    size: 14px; weight: 500;
+                }
+            }  
+        &__text {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                padding-left: 15px;
+                height: 70px;
+                h2 {
+                    font: {
+                        size: 18px; weight: 700;
+                    }
+                }
+                h3 {
+                    font: {
+                        size: 17px; weight: 300;
+                    }
+                }
+        }      
+            .fa-heart {
+                font-size: 21px;  
+                padding-right: 25px;  
+                color: black;
+            }    
+        }              
+    }
+}
+
