--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,22 +1,12 @@
-
-// les boutons de commande:
-// <button class="btn" type="button">Commander</button>
-
-.btn {
-    background: $basicbtn;
-    width: 218px;
-    height: 50px;
-    border-style: none;
-    border-radius: 25px;
-    color: white;
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-    cursor: pointer;
-    
+.btnzone {
+    display: flex;
+    justify-content: center;
+    .btn {
+        @include btndebase;
+        transition-property: transform;
+        transition-duration: 2000ms;
     &:hover {
-        background: $btnhover;
-        box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
+        @include btnclic;
+    }
     }
 }
