--- a/sass/main.css
+++ b/sass/main.css
@@ -100,7 +100,8 @@
 }
 
 .banner img {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   width: 100%;
   height: 275px;
 }
@@ -333,7 +334,8 @@ h2, h3, h4, p {
   width: 100%;
   height: 70%;
   border-radius: 15px 15px 0 0;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .restaurants .LesCards .card__text {
   display: flex;
@@ -355,6 +357,4 @@ h2, h3, h4, p {
   font-size: 21px;
   padding-right: 25px;
   color: black;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=main.css.map */
