--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,10 @@
 @import"utils/variables";
+@import"utils/mixins";
 @import"base/typography";
 @import"components/buttons";
 @import"layouts/headfoot";
 @import"layouts/form";
+@import"layouts/menus";
 
 * {
     box-sizing: border-box;
@@ -18,6 +20,9 @@ img {
 }
 a {
     text-decoration: none;
+}
+h2, h3, h4, p {
+    font-family: 'Roboto', sans-serif;
 }
 .introduction {
     display: flex;
@@ -39,21 +44,12 @@ a {
         }
     }
     :last-child {
-        background: $basicbtn;
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 218px;
-        height: 50px;
-        border-radius: 25px;
-        color: white;
-        font-size: 16px;
-        font-weight: 500;
-        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-        cursor: pointer;
+            @include btndebase;
         &:hover {
-            background: $btnhover;
-            box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
+            @include btnclic;
         }  
     }
 }
@@ -137,12 +133,6 @@ a {
             width: 100%;
             background: $lightback;
             border-radius: 15px;
-            img {
-                width: 100%;
-                height: 70%;
-                border-radius: 15px 15px 0 0;
-                object-fit: cover;
-            }
             p {
                 position: absolute;
                 right: 41px;
@@ -152,14 +142,21 @@ a {
                 font: {
                     size: 14px; weight: 500;
                 }
-            }  
+            } 
+            img {
+                width: 100%;
+                height: 70%;
+                border-radius: 15px 15px 0 0;
+                object-fit: cover;
+            }
+ 
         &__text {
                 display: flex;
                 flex-direction: row;
                 justify-content: space-between;
                 align-items: center;
                 padding-left: 15px;
-                height: 70px;
+                height: 30%;
                 h2 {
                     font: {
                         size: 18px; weight: 700;
@@ -175,6 +172,9 @@ a {
                 font-size: 21px;  
                 padding-right: 25px;  
                 color: black;
+                // &:active {
+                //     transform: ;
+                // }
             }    
         }              
     }
