--- a/assets/style.css
+++ b/assets/style.css
@@ -79,6 +79,53 @@
   font-size: 13px;
 }
 
+@media screen and (min-width: 700px) {
+  .footer {
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 114px;
+    padding-left: 0px;
+  }
+  .footer__logo {
+    padding: 0;
+  }
+  .footer__nav {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding: 0 10px;
+    width: 100%;
+  }
+  .footer__nav a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2px;
+    line-height: 17px;
+  }
+}
+@media screen and (min-width: 992px) {
+  .footer {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-start;
+    height: 114px;
+    padding-left: 0;
+  }
+  .footer__logo {
+    padding: 0 20px;
+  }
+  .footer__nav {
+    width: 70%;
+  }
+  .footer__nav a {
+    flex-direction: row;
+    align-items: center;
+    gap: 11px;
+    font-size: 14px;
+  }
+}
 .formulaire {
   display: flex;
   align-items: center;
@@ -99,6 +146,23 @@
   background-color: #EAEAEA;
 }
 
+@media screen and (min-width: 700px) {
+  .formulaire {
+    justify-content: flex-start;
+    padding-left: 17px;
+  }
+  .formulaire .fa-location-dot {
+    padding-right: 0;
+  }
+  .formulaire__location {
+    padding-left: 15px;
+  }
+}
+@media screen and (min-width: 992px) {
+  .formulaire {
+    padding-left: 80px;
+  }
+}
 .banner img {
   object-fit: cover;
   width: 100%;
@@ -124,6 +188,7 @@
 }
 .menu h2 {
   text-transform: uppercase;
+  margin: 0;
   font-size: 16px;
   font-weight: 300;
 }
@@ -131,47 +196,62 @@
   font-size: 40px;
   color: #99E2D0;
 }
-.menu__category {
-  display: flex;
-  flex-direction: column;
-  background: #FFFFFF;
-  height: 69px;
-  padding-left: 10px;
-  border-radius: 15px;
-  box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
-}
-.menu__category .details {
+.menu .category {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
-  padding-right: 10px;
+  justify-content: space-between;
+  background: #FFFFFF;
+  height: 69px;
+  border-radius: 15px;
+  box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
 }
-.menu__category .details h3 {
+.menu .category__text {
+  display: flex;
+  flex-direction: row;
+  position: static;
+}
+.menu .category__text .details {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 11px;
+}
+.menu .category__text .details h3 {
+  margin: 0;
   font-size: 18px;
-  font-weight: 500;
+  font-weight: 700;
 }
-.menu__category .details h4 {
-  font-size: 16px;
-  font-weight: 400;
+.menu .category__text .details h4 {
+  margin: 0;
+  padding-top: 3px;
+  font-size: 17px;
+  font-weight: 300;
 }
-.menu__category .details p {
+.menu .category__text .price {
+  position: absolute;
+  right: 50px;
+  color: red;
+  cursor: pointer;
   font-size: 15px;
   font-weight: 700;
 }
-.menu__category .details .fa-circle-check {
+.menu .category__checkbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #99E2D0;
+  height: 100%;
+  width: 59px;
+  color: white;
   font-size: 20px;
-  height: 69px;
-  background-color: #99E2D0;
-  border-radius: 0 15px 15px 0;
-  transform: scaleX(3);
-  transition: transform 2000ms;
+  transition: transform 500ms;
+  transform: scaleX(0);
   transform-origin: right;
 }
-.menu__category .details .fa-circle-check:hover + .menu__category .details .fa-circle-check__price {
-  transform: scaleX(0);
-  height: 69px;
-  width: 59px;
+.menu .category__checkbox:hover + .price {
+  transform: scaleX(1);
 }
 
 * {
@@ -267,6 +347,7 @@ h2, h3, h4, p {
   background: #F6F6F6;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
   border-radius: 20px;
+  position: relative;
 }
 .fonctionnement .LesEtapes .etape :nth-child(2) {
   font-size: 20px;
@@ -290,8 +371,7 @@ h2, h3, h4, p {
   color: white;
   border-radius: 50%;
   position: absolute;
-  left: 1px;
-  margin-left: 17px;
+  left: -10px;
 }
 
 .restaurants {
@@ -319,10 +399,11 @@ h2, h3, h4, p {
   width: 100%;
   background: #FFFFFF;
   border-radius: 15px;
+  position: relative;
 }
 .restaurants .LesCards .card p {
   position: absolute;
-  right: 41px;
+  right: 20px;
   background: #99E2D0;
   padding: 7px 9px;
   color: #008766;
@@ -340,21 +421,135 @@ h2, h3, h4, p {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding-left: 15px;
   height: 30%;
+  padding-left: 15px;
+  position: relative;
 }
 .restaurants .LesCards .card__text h2 {
+  margin: 0;
   font-size: 18px;
   font-weight: 700;
 }
 .restaurants .LesCards .card__text h3 {
+  margin: 0;
+  padding-top: 5px;
   font-size: 17px;
   font-weight: 300;
 }
-.restaurants .LesCards .card .fa-heart {
+.restaurants .LesCards .card .hearts :first-child {
   font-size: 21px;
   padding-right: 25px;
+  padding-bottom: 20px;
   color: black;
+  position: absolute;
+  opacity: 1;
+}
+.restaurants .LesCards .card .hearts :first-child:active {
+  opacity: 0;
+}
+.restaurants .LesCards .card .hearts :nth-child(2) {
+  font-size: 21px;
+  padding-right: 25px;
+  padding-bottom: 20px;
+  background: -webkit-linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  position: relative;
+  opacity: 0;
+  transition: opacity 2000ms;
+}
+.restaurants .LesCards .card .hearts :nth-child(2):active {
+  opacity: 1;
+}
+
+@media screen and (min-width: 700px) {
+  .introduction :first-child {
+    font-size: 30px;
+  }
+  .introduction :nth-child(2) {
+    font-size: 16px;
+  }
+  .fonctionnement h2 {
+    padding-top: 30px;
+  }
+  .fonctionnement .LesEtapes {
+    margin: 40px 0 30px 0;
+  }
+  .fonctionnement .LesEtapes .etape {
+    width: 80%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .introduction {
+    padding-bottom: 20px;
+  }
+  .introduction :first-child {
+    font-size: 40px;
+    margin-bottom: 25px;
+  }
+  .introduction :nth-child(2) {
+    margin-bottom: 0;
+  }
+  .fonctionnement {
+    min-height: 200px;
+    padding: 0 80px 0 80px;
+  }
+  .fonctionnement .LesEtapes {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  .fonctionnement .LesEtapes .etape {
+    margin-bottom: 60px;
+    width: 30%;
+  }
+  .fonctionnement .LesEtapes .etape :nth-child(2) {
+    font-size: 18px;
+    padding-right: 10px;
+  }
+  .restaurants {
+    padding: 0 80px;
+  }
+  .restaurants h1 {
+    font-size: 24px;
+    font-weight: 700;
+  }
+  .restaurants .LesCards {
+    flex-direction: row;
+    justify-content: space-between;
+    min-height: 300px;
+  }
+  .restaurants .LesCards .card {
+    height: 200px;
+    width: 24%;
+    margin: 0;
+  }
+  .restaurants .LesCards .card__text {
+    padding-left: 10px;
+  }
+  .restaurants .LesCards .card__text h2 {
+    font-size: 15px;
+  }
+  .restaurants .LesCards .card__text h3 {
+    font-size: 14px;
+  }
+  .restaurants .LesCards .card .hearts :first-child {
+    font-size: 20px;
+    padding-right: 15px;
+    padding-bottom: 10px;
+  }
+  .restaurants .LesCards .card .hearts :first-child:hover {
+    opacity: 0;
+  }
+  .restaurants .LesCards .card .hearts :nth-child(2) {
+    font-size: 20px;
+    padding-right: 15px;
+    padding-bottom: 15px;
+    transition: opacity 1500ms;
+  }
+  .restaurants .LesCards .card .hearts :nth-child(2):hover {
+    opacity: 1;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
