--- a/sass/layouts/_form.scss
+++ b/sass/layouts/_form.scss
@@ -15,6 +15,24 @@
         border: none;
         width: 40%;
         background-color: #EAEAEA;
+    }  
+}
+// responsive tablette:
+@media screen and (min-width:700px) {
+    .formulaire {
+        justify-content: flex-start;
+        padding-left: 17px;
+        .fa-location-dot {
+            padding-right: 0;
+        } 
+        &__location {
+            padding-left: 15px;
+        }  
+    }    
+}
+// responsive desktop:
+@media screen and (min-width: 992px) {
+    .formulaire {
+        padding-left: 80px;
     }
-    
 }
