--- a/sass/layouts/_headfoot.scss
+++ b/sass/layouts/_headfoot.scss
@@ -47,5 +47,55 @@
         }
     }           
 }
+// responsive tablette:
+@media screen and (min-width:700px) {
+    .footer {
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        height: 114px;
+        padding-left: 0px;
+        &__logo {
+            padding: 0;
+        }
+        &__nav {
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: flex-end;
+            padding: 0 10px;
+            width: 100%;
+            a {   
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 2px;
+                line-height: 17px;
+            }
+        }           
+    }
+    
+}
+// responsive desktop:
+@media screen and (min-width:992px) {
+    .footer {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: flex-start;
+        height: 114px;
+        padding-left: 0;
+        &__logo {
+            padding: 0 20px;
+        }
+        &__nav {
+            width: 70%;
+            a {   
+                flex-direction: row;
+                align-items: center;
+                gap: 11px;
+                font-size: 14px;
+            }
+        }           
+    }    
+}
 
 
