--- a/sass/layouts/_headfoot.scss
+++ b/sass/layouts/_headfoot.scss
@@ -24,6 +24,8 @@
     font-size: 16px;
     font-weight: 500;
     padding-left: 25px;
+    position: relative;
+    transform: translate(0, -35px);
     &__logo {
         font: {
             family: 'Shrikhand', cursive; size: 18px; weight: 400;
