--- a/sass/main.css
+++ b/sass/main.css
@@ -3,6 +3,17 @@
 /* css rules to specify families
              font-family: 'Shrikhand', cursive;  
              font-family: 'Roboto', sans-serif; */
+@-webkit-keyframes checkbox {
+  0% {
+    transform: scaleX(0);
+  }
+  25% {
+    transform: scaleX(0.85);
+  }
+  100% {
+    transform: scaleX(1);
+  }
+}
 @keyframes checkbox {
   0% {
     transform: scaleX(0);
@@ -29,9 +40,9 @@
   border-radius: 25px;
   margin: 40px 0 40px 0;
   cursor: pointer;
+  transition: all 4000ms linear;
   background: linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-  transition: all 1400ms linear;
 }
 .btnzone .btn:hover {
   background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
@@ -176,7 +187,8 @@
   }
 }
 .banner img {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   width: 100%;
   height: 275px;
 }
@@ -361,9 +373,6 @@ h2, h3, h4, p {
   border-radius: 25px;
   margin: 40px 0 40px 0;
   cursor: pointer;
-  background: linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-  transition: all 1400ms linear;
 }
 .introduction :last-child:hover {
   background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
@@ -467,7 +476,8 @@ h2, h3, h4, p {
   width: 100%;
   height: 70%;
   border-radius: 15px 15px 0 0;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .restaurants .LesCards .card__text {
   display: flex;
@@ -604,6 +614,4 @@ h2, h3, h4, p {
   .restaurants .LesCards .card .hearts :nth-child(2):hover {
     opacity: 1;
   }
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=main.css.map */
