--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,7 +1,12 @@
-$basicbtn: linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
-$btnhover: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%); 
 $mainback: #F6F6F6;
 $lightback: #FFFFFF;
-$elements-ton: #99E2D0;
+
+$basicbtn: linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%);
+$btnhover: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356DC -5.2%, #FF79DA 110.74%); 
 $basicshadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
 $hovershadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
+
+$elements-ton: #99E2D0;
+$color-primary: #9356DC;
+$color-secondary: #FF79DA;
+
